internal change 1205c26a3