@@ -16,28 +16,23 @@
 
 package dagger.internal.codegen.base;
 
-import static dagger.internal.codegen.base.Suppliers.memoize;
+import static dagger.internal.codegen.base.Preconditions.checkState;
 import static dagger.internal.codegen.extension.DaggerStreams.toImmutableSet;
-import static dagger.internal.codegen.langmodel.DaggerElements.getAnyAnnotation;
 import static dagger.internal.codegen.xprocessing.XAnnotations.getClassName;
-import static dagger.internal.codegen.xprocessing.XConverters.toJavac;
-import static io.jbock.auto.common.MoreTypes.asTypeElement;
+import static dagger.internal.codegen.xprocessing.XElements.getAnyAnnotation;
 
-import dagger.internal.codegen.javapoet.TypeNames;
 import dagger.internal.codegen.xprocessing.XAnnotation;
 import dagger.internal.codegen.xprocessing.XElement;
 import dagger.internal.codegen.xprocessing.XType;
 import dagger.internal.codegen.xprocessing.XTypeElement;
+import io.jbock.auto.value.AutoValue;
+import io.jbock.auto.value.extension.memoized.Memoized;
+import dagger.internal.codegen.collect.ImmutableList;
+import dagger.internal.codegen.collect.ImmutableSet;
 import io.jbock.javapoet.ClassName;
+import dagger.internal.codegen.javapoet.TypeNames;
 import java.util.Collection;
-import java.util.LinkedHashSet;
-import java.util.List;
 import java.util.Optional;
-import java.util.Set;
-import java.util.function.Supplier;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
-import javax.lang.model.element.AnnotationMirror;
 
 /**
  * A {@code @Component}, {@code @Subcomponent}, {@code @ProductionComponent}, or
@@ -45,58 +40,62 @@ import javax.lang.model.element.AnnotationMirror;
  * annotation that is being treated as a component annotation when validating full binding graphs
  * for modules.
  */
-public final class ComponentAnnotation {
+@AutoValue
+public abstract class ComponentAnnotation {
   /** The root component annotation types. */
-  private static final Set<ClassName> ROOT_COMPONENT_ANNOTATIONS =
-      Set.of(TypeNames.COMPONENT);
+  private static final ImmutableSet<ClassName> ROOT_COMPONENT_ANNOTATIONS =
+      ImmutableSet.of(TypeNames.COMPONENT, TypeNames.PRODUCTION_COMPONENT);
 
   /** The subcomponent annotation types. */
-  private static final Set<ClassName> SUBCOMPONENT_ANNOTATIONS =
-      Set.of(TypeNames.SUBCOMPONENT);
+  private static final ImmutableSet<ClassName> SUBCOMPONENT_ANNOTATIONS =
+      ImmutableSet.of(TypeNames.SUBCOMPONENT, TypeNames.PRODUCTION_SUBCOMPONENT);
 
   // TODO(erichang): Move ComponentCreatorAnnotation into /base and use that here?
   /** The component/subcomponent creator annotation types. */
-  private static final Set<ClassName> CREATOR_ANNOTATIONS =
-      new LinkedHashSet<>(List.of(
+  private static final ImmutableSet<ClassName> CREATOR_ANNOTATIONS =
+      ImmutableSet.of(
           TypeNames.COMPONENT_BUILDER,
           TypeNames.COMPONENT_FACTORY,
+          TypeNames.PRODUCTION_COMPONENT_BUILDER,
+          TypeNames.PRODUCTION_COMPONENT_FACTORY,
           TypeNames.SUBCOMPONENT_BUILDER,
-          TypeNames.SUBCOMPONENT_FACTORY));
+          TypeNames.SUBCOMPONENT_FACTORY,
+          TypeNames.PRODUCTION_SUBCOMPONENT_BUILDER,
+          TypeNames.PRODUCTION_SUBCOMPONENT_FACTORY);
 
   /** All component annotation types. */
-  private static final Set<ClassName> ALL_COMPONENT_ANNOTATIONS =
-      new LinkedHashSet<>(Stream.of(ROOT_COMPONENT_ANNOTATIONS, SUBCOMPONENT_ANNOTATIONS)
-          .flatMap(Set::stream)
-          .collect(Collectors.toList()));
+  private static final ImmutableSet<ClassName> ALL_COMPONENT_ANNOTATIONS =
+      ImmutableSet.<ClassName>builder()
+          .addAll(ROOT_COMPONENT_ANNOTATIONS)
+          .addAll(SUBCOMPONENT_ANNOTATIONS)
+          .build();
 
   /** All component and creator annotation types. */
-  private static final Set<ClassName> ALL_COMPONENT_AND_CREATOR_ANNOTATIONS =
-      new LinkedHashSet<>(Stream.of(ALL_COMPONENT_ANNOTATIONS, CREATOR_ANNOTATIONS)
-          .flatMap(Set::stream)
-          .collect(Collectors.toList()));
+  private static final ImmutableSet<ClassName> ALL_COMPONENT_AND_CREATOR_ANNOTATIONS =
+      ImmutableSet.<ClassName>builder()
+          .addAll(ALL_COMPONENT_ANNOTATIONS)
+          .addAll(CREATOR_ANNOTATIONS)
+          .build();
 
-  private final XAnnotation annotation;
-  private final ClassName className;
+  /** All production annotation types. */
+  private static final ImmutableSet<ClassName> PRODUCTION_ANNOTATIONS =
+      ImmutableSet.of(
+          TypeNames.PRODUCTION_COMPONENT,
+          TypeNames.PRODUCTION_SUBCOMPONENT,
+          TypeNames.PRODUCER_MODULE);
 
-  private ComponentAnnotation(
-      XAnnotation annotation,
-      ClassName className) {
-    this.annotation = annotation;
-    this.className = className;
-  }
+  private XAnnotation annotation;
 
   /** The annotation itself. */
-  public XAnnotation annotation() {
+  public final XAnnotation annotation() {
     return annotation;
   }
 
-  /** Returns the {@link ClassName} name of the annotation. */
-  public ClassName className() {
-    return className;
-  }
+  /** Returns the {@code ClassName} name of the annotation. */
+  public abstract ClassName className();
 
   /** The simple name of the annotation type. */
-  public String simpleName() {
+  public final String simpleName() {
     return className().simpleName();
   }
 
@@ -104,50 +103,57 @@ public final class ComponentAnnotation {
    * Returns {@code true} if the annotation is a {@code @Subcomponent} or
    * {@code @ProductionSubcomponent}.
    */
-  public boolean isSubcomponent() {
+  public final boolean isSubcomponent() {
     return SUBCOMPONENT_ANNOTATIONS.contains(className());
+  }
+
+  /**
+   * Returns {@code true} if the annotation is a {@code @ProductionComponent},
+   * {@code @ProductionSubcomponent}, or {@code @ProducerModule}.
+   */
+  public final boolean isProduction() {
+    return PRODUCTION_ANNOTATIONS.contains(className());
   }
 
   /**
    * Returns {@code true} if the annotation is a real component annotation and not a module
    * annotation.
    */
-  public boolean isRealComponent() {
+  public final boolean isRealComponent() {
     return ALL_COMPONENT_ANNOTATIONS.contains(className());
   }
 
   /** The types listed as {@code dependencies}. */
-  private final Supplier<List<XType>> dependencyTypesCache = memoize(() -> isRootComponent()
-      ? annotation().getAsTypeList("dependencies")
-      : List.of());
-
-  public List<XType> dependencyTypes() {
-    return dependencyTypesCache.get();
+  @Memoized
+  public ImmutableList<XType> dependencyTypes() {
+    return isRootComponent()
+        ? ImmutableList.copyOf(annotation.getAsTypeList("dependencies"))
+        : ImmutableList.of();
   }
 
   /**
    * The types listed as {@code dependencies}.
+   *
+   * @throws IllegalArgumentException if any of {@code #dependencyTypes()} are error types
    */
-  private final Supplier<Set<XTypeElement>> dependenciesCache = memoize(() ->
-      dependencyTypes().stream().map(XType::getTypeElement).collect(toImmutableSet()));
-
-  public Set<XTypeElement> dependencies() {
-    return dependenciesCache.get();
+  @Memoized
+  public ImmutableSet<XTypeElement> dependencies() {
+    return dependencyTypes().stream().map(XType::getTypeElement).collect(toImmutableSet());
   }
 
   /**
    * The types listed as {@code modules}.
+   *
+   * @throws IllegalArgumentException if any module is an error type.
    */
-  private final Supplier<Set<XTypeElement>> modulesCache = memoize(() ->
-      annotation().getAsTypeList(isRealComponent() ? "modules" : "includes").stream()
-          .map(XType::getTypeElement)
-          .collect(toImmutableSet()));
-
-  public Set<XTypeElement> modules() {
-    return modulesCache.get();
+  @Memoized
+  public ImmutableSet<XTypeElement> modules() {
+    return annotation.getAsTypeList(isRealComponent() ? "modules" : "includes").stream()
+        .map(XType::getTypeElement)
+        .collect(toImmutableSet());
   }
 
-  private boolean isRootComponent() {
+  private final boolean isRootComponent() {
     return ROOT_COMPONENT_ANNOTATIONS.contains(className());
   }
 
@@ -182,18 +188,12 @@ public final class ComponentAnnotation {
 
   /** Returns {@code true} if the argument is a component annotation. */
   public static boolean isComponentAnnotation(XAnnotation annotation) {
-    return isComponentAnnotation(toJavac(annotation));
-  }
-
-  /** Returns {@code true} if the argument is a component annotation. */
-  public static boolean isComponentAnnotation(AnnotationMirror annotation) {
-    ClassName className = ClassName.get(asTypeElement(annotation.getAnnotationType()));
-    return ALL_COMPONENT_ANNOTATIONS.contains(className);
+    return ALL_COMPONENT_ANNOTATIONS.contains(getClassName(annotation));
   }
 
   /** Creates an object representing a component or subcomponent annotation. */
   public static ComponentAnnotation componentAnnotation(XAnnotation annotation) {
-    Preconditions.checkState(
+    checkState(
         isComponentAnnotation(annotation),
         annotation
             + " must be a Component, Subcomponent, ProductionComponent, "
@@ -206,40 +206,30 @@ public final class ComponentAnnotation {
     return create(moduleAnnotation.annotation());
   }
 
+  private static ComponentAnnotation create(XAnnotation annotation) {
+    ComponentAnnotation componentAnnotation =
+        new AutoValue_ComponentAnnotation(getClassName(annotation));
+    componentAnnotation.annotation = annotation;
+    return componentAnnotation;
+  }
+
   /** The root component annotation types. */
-  public static Set<ClassName> rootComponentAnnotations() {
+  public static ImmutableSet<ClassName> rootComponentAnnotations() {
     return ROOT_COMPONENT_ANNOTATIONS;
   }
 
   /** The subcomponent annotation types. */
-  public static Set<ClassName> subcomponentAnnotations() {
+  public static ImmutableSet<ClassName> subcomponentAnnotations() {
     return SUBCOMPONENT_ANNOTATIONS;
   }
 
   /** All component annotation types. */
-  public static Set<ClassName> allComponentAnnotations() {
+  public static ImmutableSet<ClassName> allComponentAnnotations() {
     return ALL_COMPONENT_ANNOTATIONS;
   }
 
   /** All component and creator annotation types. */
-  public static Set<ClassName> allComponentAndCreatorAnnotations() {
+  public static ImmutableSet<ClassName> allComponentAndCreatorAnnotations() {
     return ALL_COMPONENT_AND_CREATOR_ANNOTATIONS;
-  }
-
-  @Override
-  public boolean equals(Object o) {
-    if (this == o) return true;
-    if (o == null || getClass() != o.getClass()) return false;
-    ComponentAnnotation that = (ComponentAnnotation) o;
-    return className.equals(that.className);
-  }
-
-  @Override
-  public int hashCode() {
-    return className.hashCode();
-  }
-
-  private static ComponentAnnotation create(XAnnotation annotation) {
-    return new ComponentAnnotation(annotation, getClassName(annotation));
   }
 }
